[gd_scene load_steps=7 format=3 uid="uid://bbtmkjhxm183i"]

[ext_resource type="Script" uid="uid://0yar71dmhfeh" path="res://scenes/control.gd" id="1_brbbq"]
[ext_resource type="FontFile" uid="uid://cu0innmwdnk6r" path="res://Fonts/PlayfairDisplay-SemiBold.ttf" id="2_62e2m"]
[ext_resource type="FontFile" uid="uid://h7xhacchr1c7" path="res://Fonts/PlayfairDisplay-Regular.ttf" id="2_qtu10"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_62e2m"]
bg_color = Color(0.0352941, 0.0352941, 0.0980392, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qtu10"]
bg_color = Color(0.728822, 0.728822, 0.728822, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ee4bf"]
bg_color = Color(0.259294, 0.259294, 0.259294, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1150.0
offset_bottom = 648.0
script = ExtResource("1_brbbq")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_62e2m")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="EmailContent" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_qtu10")

[node name="Scroll" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer/EmailContent"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/EmailContent/Scroll"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/EmailContent/Scroll/VBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme_override_colors/font_color = Color(0.230315, 0.230315, 0.230315, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_62e2m")
theme_override_font_sizes/font_size = 21
text = "\"We just got done with a client meeting and based on the meeting, we are sending the meeting notes and also the other documents they've requested during the meeting, furthermore, you want to emphasize them to send the required materials discussed during the meeting as soon as possible.
structure the email such that the client knows it is urgent for them to send the required documents from their end.\" "
autowrap_mode = 3

[node name="EmailBody" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/EmailContent/Scroll/VBoxContainer"]
custom_minimum_size = Vector2(1100, 200)
layout_mode = 2
theme_override_colors/table_border = Color(0, 0, 0, 1)
theme_override_colors/table_even_row_bg = Color(0, 0, 0, 1)
theme_override_colors/table_odd_row_bg = Color(0, 0, 0, 1)
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_colors/selection_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_62e2m")
theme_override_font_sizes/normal_font_size = 20

[node name="OptionContent" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_ee4bf")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/OptionContent"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/OptionContent/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_qtu10")
theme_override_font_sizes/font_size = 20
autowrap_mode = 3

[node name="Button2" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/OptionContent/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_qtu10")
theme_override_font_sizes/font_size = 20
autowrap_mode = 3

[node name="Button3" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/OptionContent/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_qtu10")
theme_override_font_sizes/font_size = 20
autowrap_mode = 3

[node name="Button4" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/OptionContent/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_qtu10")
theme_override_font_sizes/font_size = 20
autowrap_mode = 3

[node name="QuestionLabel" type="Label" parent="."]
custom_minimum_size = Vector2(1100, 50)
layout_mode = 2
anchor_left = 0.065
anchor_top = 0.583
anchor_right = 0.065
anchor_bottom = 0.583
offset_left = -52.88
offset_top = 0.216003
offset_right = 1047.12
offset_bottom = 50.216
scale = Vector2(1.00835, 0.83911)
size_flags_vertical = 8
size_flags_stretch_ratio = 20.0
theme_override_colors/font_color = Color(0.121569, 0.105882, 0.196078, 1)
theme_override_fonts/font = ExtResource("2_62e2m")
theme_override_font_sizes/font_size = 26
autowrap_mode = 3

[node name="EndButton" type="Button" parent="."]
layout_mode = 0
offset_left = 462.0
offset_top = 505.0
offset_right = 652.0
offset_bottom = 572.0
text = "Finish"

[connection signal="pressed" from="EndButton" to="." method="_on_exit_pressed"]
